@@ -1377,6 +1377,8 @@ body {
 
 <p><strong>power.no_attack</strong> | <code>bool</code> | Hazard won&rsquo;t affect other entities.</p>
 
+<p><strong>power.no_aggro</strong> | <code>bool</code> | If true, the Hazard won&rsquo;t put its target in a combat state.</p>
+
 <p><strong>power.radius</strong> | <code>float</code> | Radius in pixels</p>
 
 <p><strong>power.base_damage</strong> | <code>predefined_string : Damage type ID</code> | Determines which damage stat will be used to calculate damage.</p>
